<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.profoundtechs.campus.StartActivity">

    <ImageView
        android:id="@+id/ivStart"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:srcCompat="@drawable/logo_pic"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvStartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ivStart"
        android:paddingEnd="80dp"
        android:paddingStart="80dp"
        android:text="@string/welcome_to_campus"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvStartDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_detail"
        android:textAlignment="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/tvStartTitle"/>

    <Button
        android:id="@+id/btnStartLogin"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tvStartNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/new_account"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>
